fixing spacing on workout exercise listings

--- a/app/common/assets/sass/custom.scss
+++ b/app/common/assets/sass/custom.scss
@@ -379,6 +379,7 @@
         display:inline-block;
         padding-left:40px;
         line-height: 1.125;
+        width:80%
     }
 
     .super-arrow-right-b {
